# obtuse-code-challenge-binary-search-walk

./: Cargo.toml  README.md
Golang_Solutions/: go.mod  main.go  obtuse_interview_go
JavaScript_Solutions/: binSearch.js  nearestBinSearch.js
Python_Solutions/: nearest_binary_search.py
src/: main.rs
src/bounded_bin_search/: match_scores.rs  mod.rs  mre.rs
